
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int RAnalEsil ;



__attribute__((used)) static int esil_x86_cs_init(RAnalEsil *esil) {
 if (!esil) {
  return 0;
 }




 return 1;
}
